Moved cache file into working directory